--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
